--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <link rel="stylesheet" href="style.js">
 </head>
 <body>
-    
+    <header id="main">
+        <nav>
+            <a href="#">Logo</a>
+            <div class="nav-menu">
+                <a href="#">Home</a>
+                <a href="#">Produtos</a>
+                <a href="#">Lojas</a>
+                <a href="#">Contatos</a>
+            </div>
+            <img src="/imagens/menu.png" alt="imagens-projeto">
+        </nav>
+        <div class="hero">
+            <h1>FANTA</h1>
+            <img id="laranja-cortada" src="/imagens/orange2.png" alt="orange.png">
+            <img id="fanta" src="/imagens/fanta.png"  alt="fanta.png">
+            <img id="laranja" src="/imagens/orange.png"  alt="laranja.png">
+            <img id="folha" src="/imagens/leaf.png"  alt="folha.png">
+            <img id="folha2" src="/imagens/leaf2.png"  alt="folha2.png">
+            <img id="folha3" src="/imagens/coconoutleaf.png" alt="folha3.webp">
+        </div>
+        
+    </header>
 </body>
 </html>
