atualizando posicionamento e tamanho

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header id="main">
-        <nav>
+        <nav class="nav-container">
             <a href="#">Logo</a>
             <div class="nav-menu">
                 <a href="#">Home</a>
@@ -23,10 +23,10 @@
             <h1>FANTA</h1>
             <img id="laranja-cortada" src="/imagens/orange2.png" alt="orange.png">
             <img id="fanta" src="/imagens/fanta.png"  alt="fanta.png">
-            <img id="laranja" src="/imagens/orange.png"  alt="laranja.png">
-            <img id="folha" src="/imagens/leaf.png"  alt="folha.png">
-            <img id="folha2" src="/imagens/leaf2.png"  alt="folha2.png">
-            <img id="folha3" src="/imagens/coconoutleaf.png" alt="folha3.webp">
+            <img id="laranja" src="/imagens/orange.webp"  alt="laranja.png">
+            <img id="folha" src="/imagens/leaf.webp"  alt="folha.png">
+            <img id="folha2" src="/imagens/leaf2.webp"  alt="folha2.png">
+            <img id="folha3" src="/imagens/coconoutleaf.webp" alt="folha3.webp">
         </div>
         
     </header>
