atualização de arquivos e posicionamento na pagina 3

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         </nav>
         <div class="hero">
             <h1>FANTA</h1>
-            <img id="laranja-cortada" src="/imagens/orange2.png" alt="orange.png">
-            <img id="fanta" src="/imagens/fanta.png"  alt="fanta.png">
-            <img id="laranja" src="/imagens/orange.webp"  alt="laranja.png">
-            <img id="folha" src="/imagens/leaf.webp"  alt="folha.png">
-            <img id="folha2" src="/imagens/leaf2.webp"  alt="folha2.png">
-            <img id="folha3" src="/imagens/coconoutleaf.webp" alt="folha3.webp">
+            <img id="laranja-cortada" src="/imagens/orange2.png" alt="orange">
+            <img id="fanta" src="/imagens/fanta.png"  alt="fanta">
+            <img id="laranja" src="/imagens/orange.webp"  alt="laranja">
+            <img id="folha" src="/imagens/leaf.webp"  alt="folha">
+            <img id="folha2" src="/imagens/leaf2.webp"  alt="folha2">
+            <img id="folha3" src="/imagens/coconoutleaf.webp" alt="folha3">
         </div>
         <div class="two">
             <div class="left-side">
@@ -44,12 +44,30 @@
 
             <div class="right-side">
 
-                <h2>flavour Updated</h2>
+                <h2>Flavour Updated</h2>
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit ullam placeat distinctio. Aliquid eum omnis eaque assumenda veritatis laudantium reprehenderit nesciunt commodi aperiam odit minima sapiente, ipsa, similique, soluta non! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor odio fuga doloribus sit vel eaque nobis deleniti optio et est sapiente iusto magnam laboriosam, officia earum velit repellendus eligendi atque.
 
                 </p>
             </div>
+        </div>
+        <div class="three">
+            <div class="card">
+                <img class="lemon lemon1" src="/imagens/lemon.webp" alt="imagem lemons">
+                <img id="cocacola" src="/imagens/cocacola.png" alt="cocacola">
+                <h3>Coca Cola</h3>
+                <button>Adquirir já</button>
+            </div>
+            <div class="card">
+                <h3>Fanta Laranja</h3>
+                <button>Adquirir já</button>
+          </div>
+          <div class="card">
+                <img class="lemon lemon2" src="/imagens/lemon.webp" alt="imagem lemons">
+                <img id="pepsi" src="/imagens/pepsi.png" alt="cocacola">
+                <h3>Pepsi</h3>
+                <button>Adquirir já</button>
+           </div>
         </div>
         
     </header>
