--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
                 <a href="#">Lojas</a>
                 <a href="#">Contatos</a>
             </div>
-            <img src="/imagens/menu.png" alt="imagens-projeto">
+            <img src="/Projeto-Fanta/imagens/menu.png" alt="imagens-projeto">
         </nav>
         <div class="hero">
             <h1>FANTA</h1>
-            <img id="laranja-cortada" src="/imagens/orange2.png" alt="orange">
-            <img id="fanta" src="/imagens/fanta.png"  alt="fanta">
-            <img id="laranja" src="/imagens/orange.webp"  alt="laranja">
-            <img id="folha" src="/imagens/leaf.webp"  alt="folha">
-            <img id="folha2" src="/imagens/leaf2.webp"  alt="folha2">
-            <img id="folha3" src="/imagens/coconoutleaf.webp" alt="folha3">
+            <img id="laranja-cortada" src="/Projeto-Fanta/imagens/orange2.png" alt="orange">
+            <img id="fanta" src="/Projeto-Fanta/imagens/fanta.png"  alt="fanta">
+            <img id="laranja" src="/Projeto-Fanta/imagens/orange.webp"  alt="laranja">
+            <img id="folha" src="/Projeto-Fanta/imagens/leaf.webp"  alt="folha">
+            <img id="folha2" src="/Projeto-Fanta/imagens/leaf2.webp"  alt="folha2">
+            <img id="folha3" src="/Projeto-Fanta/imagens/coconoutleaf.webp" alt="folha3">
         </div>
         <div class="two">
             <div class="left-side">
@@ -53,8 +53,8 @@
         </div>
         <div class="three">
             <div class="card">
-                <img class="lemon lemon1" src="/imagens/lemon.webp" alt="imagem lemons">
-                <img id="cocacola" src="/imagens/cocacola.png" alt="cocacola">
+                <img class="lemon lemon1" src="/Projeto-Fanta/imagens/lemon.webp" alt="imagem lemons">
+                <img id="cocacola" src="/Projeto-Fanta/imagens/cocacola.png" alt="cocacola">
                 <h3>Coca Cola</h3>
                 <button>Adquirir já</button>
             </div>
@@ -63,8 +63,8 @@
                 <button>Adquirir já</button>
           </div>
           <div class="card">
-                <img class="lemon lemon2" src="/imagens/lemon.webp" alt="imagem lemons">
-                <img id="pepsi" src="/imagens/pepsi.png" alt="cocacola">
+                <img class="lemon lemon2" src="/Projeto-Fanta/imagens/lemon.webp" alt="imagem lemons">
+                <img id="pepsi" src="/Projeto-Fanta/imagens/pepsi.png" alt="cocacola">
                 <h3>Pepsi</h3>
                 <button>Adquirir já</button>
            </div>
